# c_programming_language_exercises

./: CMakeLists.txt  a.out  chapter5.c  chapter5_10.c  chapter5_12.c  chapter5_6.c  chapter5_8.c  chapter6_3.c  chapter6_5.c  chapter6_6.c  chapter7_5.c  chapter7_6.c  chapter8_2_1.c  chapter8_2_2.c  chapter8_3.c  chapter8_4.c  chapter8_5.c  chapter8_6.c  chapter8_7.c  charutil.c  charutil.h  ex1_10.c  ex1_12.c  ex1_13.c  ex1_14.c  ex1_15.c  ex1_16.c  ex1_16_before_demo.c  ex1_17.c  ex1_18.c  ex1_19.c  ex1_20.c  ex1_21.c  ex1_22.c  ex1_23.c  ex1_24.c  ex1_3.c  ex1_4.c  ex1_5.c  ex1_6.c  (+49 more)
bitFields/: demo1.c  demo2.c  demo3.c  demo4.c  demo5.c  demo6.c  demo7.cpp  demo8.c  test1.c  test2.c  test3.c
compoundliteral/: demo.c
doublepointer/: test.c
dynamicmemoryallocation/: demo.c  demo2.c  demo3.c  demo4.c
rand/: demo1.c  demo2.c
register/: demo.c
static/: file1.c  file1.h  file2.c  static.c  static2.c  static3.c
stdlibstudy/: tmpnam.c
union/: demo.c  demo2.c  demo3.c  demo4.c
void/: demo.c  demo2.c
volatile/: demo1.c
