# cmake_minimum_required(VERSION <specify CMake version here>)
project(c_programming_language_exercises C)

set(CMAKE_C_STANDARD 99)

add_executable(c_programming_language_exercises ex1_3.c ex1_4.c ex1_5.c ex1_6.c ex1_7.c ex1_8.c ex1_9.c ex1_10.c ex1_12.c ex1_13.c ex1_14.c ex1_15.c ex1_16_before_demo.c ex1_16.c ex1_17.c ex1_18.c ex1_19.c ex1_20.c ex1_21.c ex1_22.c ex1_23.c ex1_24.c)